New in v0.13.1 (2003/08/??)
---------------------------

Patch by Arkadiusz Patyk fixes building with Python 2.3c1.

Restore of archives made by 0.10.x and earlier fixed, although hard
link information is not restored unless it is current in the mirror.
(Bug reported by Jeff Lessem.)

Fixed problem with door files locally when repository is remote.
(Reported by Robert Weber.)


New in v0.13.0 (2003/07/22)
---------------------------

To prevent the buildup of confusing and error-prone options, the
capabilities of the source and destination file systems are now
autodetected.  Detected features include allowed characters, extended
attributes, access control lists, hard links, ownership, and directory
fsyncing.  Options such as --windows-mode, --chars-to-quote,
--quoting-char, and --windows-restore-mode have been removed.

Now rdiff-backup supports user extended attributes (EAs).  To take
advantage of this you will need the python module pyxattr and a file
system that supports EAs.  Thanks to Greg Freemyer for valuable
discussion.

Support for access control lists (ACLs) was also added.  An ACL
capable file system and the python package pylibacl (which exports the
posix1e module) are required.  Thanks to Greg Freemyer for valuable
discussion.

Thanks to patches by Daniel Hazelbaker, rdiff-backup now reads and
writes Mac OS X style resource forks!

****** Warning ****** The above features are new to this development
release, and it is difficult to test all the possibly combinations of
source and destination file systems.  They should not be considered
stable.  However, help would be appreciated testing these new
features.

****** Warning #2 ****** rdiff-backup records ACL and EA information
in files designed to be compatible with the utilities "getfacl" and
"getfattr".  However, there is a possible security hole in both these
formats (see
http://acl.bestbits.at/pipermail/acl-devel/2003-June/001498.html).
rdiff-backup's format will be fixed when getf{attr|acl}'s is.
